--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -9,7 +9,7 @@
 {% endblock head_title %}
 
 {% block content %}
-  <div class = "container">
+  <div class = "container pb-3">
     <h1>Shopping Cart</h1>
     {% if cart %}
       <table class='table'>
