--- a/templates/perfiles/addresses.html
+++ b/templates/perfiles/addresses.html
@@ -32,7 +32,7 @@
         <div class="card pb-3 h-100">
           <div class="card-header bg-light text-primary text-center">
             {% if address.default %}
-              <b>Dirección por defecto</b>
+              <b>Dirección de envío por defecto</b>
             {% endif %}
             &nbsp;
           </div>
