--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -1,9 +1,10 @@
 {% load static %}
+{% load cart_template_tags %}
 {% load i18n %}
 <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll" style="background-color: #e3f2fd;">
   <div class="container">
     <a class="navbar-brand d-inline-flex" href="/">
-      <img class="d-inline-block" src="{% static 'img/logo1.png' %}" alt="logo" />
+      <img class="d-inline-block" src="{% static 'img/logo1.png' %}" alt="Logo" />
       <span class="text-1000 fs-0 fw-bold ms-2">Sproj-4</span>
     </a>
     <button
@@ -78,7 +79,7 @@
             </li>
           </ul>
           <a class="text-1000" href="{% url 'cart:cart_detail' %}">
-            <span class="badge badge-pill bg-danger">{% with total_items=cart|length %}{{ total_items }}{% endwith %}</span>
+            <span class="badge badge-pill bg-danger">{{ request|cart_item_count }}</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart me-3"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
           </a>
           <a
@@ -118,7 +119,7 @@
         <form class="d-flex">
           {% csrf_token %}
           <a class="text-1000" href="{% url 'cart:cart_detail' %}">
-            <span class="badge badge-pill bg-danger">{% with total_items=cart|length %}{{ total_items }}{% endwith %}</span>
+            <span class="badge badge-pill bg-danger">{{ request|cart_item_count }}</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart me-3"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
           </a>
           <a class="text-1000 me-3" href="/">
