--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -11,15 +11,16 @@
 {% block content %}
   <div class = "container pb-3">
     <h1>Shopping Cart</h1>
-      <table class='table'>
+    <div class="table-responsive">
+      <table class='table align-middle'>
         <thead>
           <tr class="text-center">
-            <th>Image</th>
-            <th>Product</th>
-            <th>Quantity</th>
-            <th>Remove</th>
-            <th>Unit Price</th>
-            <th>Price</th>
+            <th>Imágen</th>
+            <th>Producto</th>
+            <th>Cantidad</th>
+            <th>Acciones</th>
+            <th>Precio Unidad</th>
+            <th>Total</th>
           </tr>
         </thead>
         <tbody>
@@ -41,8 +42,8 @@
               <td>
                 <a href="{% url 'cart:remove-from-cart' item.id %}" class="btn btn-danger btn-sm">Eliminar</a>
               </td>
-              <td class="num">$ {{ item.product.product.get_price|intcomma }}</td>
-              <td class="num">$ {{ item.get_total_item_price|intcomma }}</td>
+              <td>$ {{ item.product.product.get_price|intcomma }}</td>
+              <td>$ {{ item.get_total_item_price|intcomma }}</td>
             </tr>
           {% empty %}
             <tr>
@@ -55,23 +56,19 @@
           {% endfor %}
           {% if post %}
             <tr class="total">
-            <td>Subtotal</td>
-            <td colspan="4"></td>
-            <td class="num">$ {{ order.get_subtotal|intcomma }}</td>
-          </tr>
-          <tr class="total">
-            <td>Total</td>
-            <td colspan="4"></td>
-            <td class="num">$ {{ order.get_total|intcomma }}</td>
-          </tr>
+              <td colspan="4"></td>
+              <th>Total</th>
+              <th>$ {{ order.get_total|intcomma }}</th>
+            </tr>
           {% else %}
 
           {% endif %}
         </tbody>
       </table>
-      <p class="text-right">
-        <a href="{% url 'store:home' %}" class="btn btn-primary">Seguir Comprando</a>
-        <a href="{% url 'cart:checkout' %}" class="btn btn-warning">Verificar Compra</a>
-      </p>
+    </div>
+    <p class="text-right">
+      <a href="{% url 'store:home' %}" class="btn btn-primary">Seguir Comprando</a>
+      <a href="{% url 'cart:checkout' %}" class="btn btn-warning">Verificar Compra</a>
+    </p>
   </div>
 {% endblock content %}
