cambio de nombre de direccion

--- a/templates/cart/checkout.html
+++ b/templates/cart/checkout.html
@@ -32,12 +32,12 @@
                                         <dl class="row">
                                         <dt class="col-sm-4">Residencia:</dt>
                                         <dd class="col-sm-8">
-                                            {{address.residencia_address}}
+                                            {{address.shipping_address}}
                                         </dd>
-                                        {% if address.oficina_address %}
+                                        {% if address.billing_address %}
                                             <dt class="col-sm-4">Oficina:</dt>
                                             <dd class="col-sm-8">
-                                            {{address.oficina_address}}
+                                            {{address.billing_address}}
                                             </dd>
                                         {% endif %}
                                         <dt class="col-sm-4">Ciudad:</dt>
