--- a/templates/perfiles/detail.html
+++ b/templates/perfiles/detail.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="col-sm-9">
                   {% for addr in addresses %}
-                    <p class="text-muted mb-0">{{ addr.residencia_address }}</p>
+                    <p class="text-muted mb-0">{{ addr.shipping_address }}</p>
                   {% endfor %}
                 </div>
               </div>
