--- a/templates/perfiles/edit_addresses.html
+++ b/templates/perfiles/edit_addresses.html
@@ -16,12 +16,12 @@
               </div>
             {% endif %}
             <div class="mb-3">
-              <label for="direccionResidencia" class="form-label">{{ form.residencia_address.label}}</label>
-                {{ form.residencia_address }}
+              <label for="direccionResidencia" class="form-label">{{ form.shipping_address.label}}</label>
+                {{ form.shipping_address }}
             </div>
             <div class="mb-3">
-              <label class="form-label">{{ form.oficina_address.label}}</label>
-                {{ form.oficina_address }}
+              <label class="form-label">{{ form.billing_address.label}}</label>
+                {{ form.billing_address }}
             </div>
             <div class="mb-3">
               <label class="form-label">{{ form.ciudad.label}}</label>
